# chainweb-mining-client

./: .gitignore  BENCHMARK_GUIDE.md  CLAUDE.md  Cargo.toml  Dockerfile  MISSING_FEATURES_IN_RUST.md  OPTIMIZATIONS.md  README.md  RUN_BENCHMARKS.sh  RUST_VS_HASKELL_COMPARISON.md  build.sh  chainweb-mining-client.cabal
.github/: dependabot.yml
.github/workflows/: rust-ci.yml  rust-release.yml
benchmarks/: quick-benchmark.sh  setup-and-build.sh
chainweb-mining-client-rust/: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CARGO_MAKE_GUIDE.md  Cargo.toml  Dockerfile  Dockerfile.distroless  E2E_STRESS_TESTING.md  JUSTFILE_GUIDE.md  MIGRATION_SUMMARY.md  Makefile.toml  README.md  build-docker.sh  build-local.sh  example-config.toml  example-gpu-config.toml  justfile  test-all.sh
chainweb-mining-client-rust/benches/: comprehensive_performance.rs  config_performance.rs  memory_performance.rs  mining_performance.rs  protocol_performance.rs  simd_performance.rs  stratum_performance.rs  stress_tests.rs
chainweb-mining-client-rust/docs/: gpu-miner-protocol.md  performance-optimizations.md
chainweb-mining-client-rust/examples/: enumerate_gpus.rs  gpu_miner_stub.py  memory_demo.rs  simd_comparison.rs  simd_demo.rs
chainweb-mining-client-rust/proptest-regressions/core/: target_arithmetic.txt
chainweb-mining-client-rust/scripts/: bench.sh  e2e-stress-test.sh  install-deps.sh  perf_test.sh  test-stratum.sh
chainweb-mining-client-rust/src/: error.rs  lib.rs  main.rs
chainweb-mining-client-rust/src/config/: mod.rs
chainweb-mining-client-rust/src/core/: chain_id.rs  difficulty.rs  hash_simd.rs  mod.rs  nonce.rs  preemption.rs  simd_hasher.rs  target.rs  target_arithmetic.rs  tests_blockchain_headers.rs  tests_extended.rs  tests_property_comprehensive.rs  tests_property_simple.rs  work.rs
chainweb-mining-client-rust/src/protocol/: chainweb.rs  http_pool.rs  mod.rs  retry.rs
chainweb-mining-client-rust/src/shaders/: blake2s.wgsl
chainweb-mining-client-rust/src/utils/: logging.rs  memory.rs  mod.rs  monitoring.rs  units.rs
chainweb-mining-client-rust/src/workers/: constant_delay.rs  cpu.rs  external.rs  gpu.rs  mod.rs  on_demand.rs  simulation.rs
chainweb-mining-client-rust/src/workers/stratum/: difficulty.rs  hex.rs  job.rs  mod.rs  nonce.rs  protocol.rs  server.rs  session.rs
chainweb-mining-client-rust/tests/: compatibility.rs  config_cascade.rs  config_remote.rs  debug_format.rs  e2e_stress_test.rs  http_pool_integration.rs  integration_tests.rs  mining_flow.rs  stratum_advanced.rs  stratum_compatibility.rs
chainweb-mining-client-rust/tests/e2e/: README.md  run-benchmarks.sh  run-e2e-tests.sh
chainweb-mining-client-rust/tests/e2e/docker/: docker-compose.base.yml  docker-compose.constant-delay.yml  docker-compose.cpu.yml  docker-compose.external.yml  docker-compose.on-demand.yml  docker-compose.simulation.yml  docker-compose.stratum.yml
chainweb-mining-client-rust/tests/e2e/results/: e2e_test_results_20250712_173444.json  e2e_test_results_20250712_174423.json  e2e_test_results_20250712_174920.json  e2e_test_results_20250712_175050.json  e2e_test_results_20250712_180507.json  e2e_test_summary_20250712_174920.txt  e2e_test_summary_20250712_175050.txt
chainweb-mining-client-rust/tests/e2e/scripts/: mock-miner.sh
src/: JsonRpc.hs  client.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  stratum.rs  types.rs  utils.rs
src/Worker/POW/Stratum/: Protocol.hs  Server.hs
src/worker/: constant_delay.rs  cpu.rs  external.rs  mod.rs  on_demand.rs  simulation.rs
test-compatibility/: README.md  docker-compose.minimal.yml  docker-compose.simple.yml  docker-compose.yml  minimal-config.yaml  start-chainweb-node.sh  test-all-workers.sh  test-external-worker.sh  test-on-demand-worker.sh  test-stratum-worker.sh
