[package]
name = "chainweb-mining-client"
version = "0.5.0"
edition = "2021"
description = "A high-performance mining client for Kadena Chainweb with ASIC, CPU, and testing support"
homepage = "https://github.com/kadena-io/chainweb-mining-client"
repository = "https://github.com/kadena-io/chainweb-mining-client"
license = "BSD-3-Clause"
authors = ["Kadena LLC"]
categories = ["cryptography", "command-line-utilities"]
keywords = ["blockchain", "mining", "cryptocurrency", "kadena", "chainweb"]

[[bin]]
name = "chainweb-mining-client"
path = "src/main.rs"

[dependencies]
# Async runtime and utilities
tokio = { version = "1.45", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
futures = "0.3"

# HTTP client and server
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
hyper = { version = "1.6", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration and CLI
clap = { version = "4.4", features = ["derive", "env", "color"] }
config = "0.15"

# Cryptography
blake2 = "0.10"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.9"
hex = "0.4"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Networking and concurrency
uuid = { version = "1.6", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "6.1"

# Time and duration
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.2"

# Process management
subprocess = "0.2"

# Binary encoding
byteorder = "1.5"
bytes = "1.10"

# Utility
url = "2.5"
once_cell = "1.21"
pin-project = "1.1"

# Async programming
async-trait = "0.1"
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.20"
assert_matches = "1.5"
proptest = "1.7"
tokio-test = "0.4"
criterion = "0.6"

[[bench]]
name = "mining_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true
