[package]
name = "chainweb-mining-client"
version = "0.1.0"
edition = "2021"
authors = ["Chainweb Mining Client Contributors"]
description = "A high-performance Rust implementation of the Chainweb mining client"
license = "BSD-3-Clause"
repository = "https://github.com/kadena-io/chainweb-mining-client"
keywords = ["blockchain", "mining", "kadena", "chainweb", "cryptocurrency"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# HTTP client and server
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
axum = { version = "0.7", features = ["tokio"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
bincode = "1.3"

# Cryptography
blake2 = "0.10"
hex = "0.4"
base64 = "0.22"

# CLI and configuration
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
config = { version = "0.14", features = ["toml"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "6.0"
bytes = "1.6"
futures = "0.3"
pin-project = "1.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# SSE support
eventsource-stream = "0.2"

# Process management for external workers
async-process = "2.2"

# Performance
rayon = "1.10"
num_cpus = "1.16"

# Testing
proptest = { version = "1.5", optional = true }
criterion = { version = "0.5", optional = true }

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
mockito = "1.5"
tempfile = "3.12"
pretty_assertions = "1.4"
test-case = "3.3"
rstest = "0.22"

[features]
default = []
bench = ["criterion"]
test-utils = ["proptest"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"

[[bench]]
name = "mining_performance"
harness = false
required-features = ["bench"]

[lib]
name = "chainweb_mining_client"
path = "src/lib.rs"

[[bin]]
name = "chainweb-mining-client"
path = "src/main.rs"
